src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Inspection__c</fullName>
        <label>Inspection</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Positive_Results__c</fullName>
        <label>Positive Results</label>
        <summarizedField>Survey_Response__c.Positive__c</summarizedField>
        <summaryForeignKey>Survey_Response__c.Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Questions_Count__c</fullName>
        <label>Questions Count</label>
        <summaryFilterItems>
            <field>Survey_Response__c.Answered__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey_Response__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <formula>if (Questions_Count__c &gt; 0, Positive_Results__c /  Questions_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <formula>Inspection__r.Store__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Name</label>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Survey-{0000000}</displayFormat>
        <label>Id Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>